# PyQt5

./: .gitignore  HelloWorld.ui  Hello_2.py  Load_QT.md  Load_Qt2.md  Tabber.py  ToDo.ui  cleaner.py  main.py  myCleaner.py  pyproject.toml  qt_enum_cleaner.py  requirements.txt  todo_list.db  updated_qt_enum_cleaner.py
Alan_D_Moore/: M_3_handBuild.py  M_4_signals_slots.py  M_5_moving_data.py  M_6_QMainWindow.py  M_7.PY  Moore_Notes.md  Template.py
BackUp/: Cod_5.py  MyCalc_1.py  MyCalc_backup_1.ui  Notes.md  calc_backup.py  calc_backup.ui  qt_enum_cleaner.py
Codemy/: DesignerTips.md  HelloWorld.py  Msry_1.py  MyCalc.py  MyCalc_1.py  MyCalc_2.py  MyCalc_backup_1.py  Smile_detect.py  Tabber.ui  ToDo.ui  ToDo_dBase.py  ToDo_icon.py  Toolbar.ui  calc.ui  reject_MyCalc.py  rubberDuckey.icns  setup.py  tempCodeRunnerFile.py  test4.py  todo_list.db
GeeksForGeeks/: MyQApplications.py  MyQDialogColor.py  myQAction.py
LearnerFolder/: EvalMethod.py  GridLayout_CheckBox.py  List_comprehension.py  MyDialog_1.py  PyGuis_1_QwidgetVsQWindow.py  Py_Tut_1.py  Py_Tut_2.py  Py_Tut_3A_CheckBox.py  Py_Tut_3_Chat_CheckBox.py  Py_Tut_3_CheckBox.py  Py_Tut_4_lineEdit.py  Pyto_robotGUI copy.py  Toolbar.py  Ui_Form_Import.py  Ui_Form_Import.ui  Ui_Form_Import2.py  Ui_Form_Use_Import.py  index.html  learner.md  myLogin.py  pico_robot_http_server.py  setEnabled.py  tempCodeRunnerFile.py  treeWidget.py
Notes/: DesignerTips.md  ENUM_Fixes.md  Load_QT.md  Making_Icons.md  Notes.md
PW/: PW_112_Led_UDP.py  PW_113_Plotting_Data.py  PW_114_RGB_PyQt.py
ToDo/: ToDo.py  ToDo_dBase.ui  ToDo_json.py  (+2 more)
(+59 files in other folders)
