[project]
name = "MyPyqt5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.6"
dependencies = [
    "altgraph==0.17.4",
    "macholib==1.16.3",
    "modulegraph==0.19.6",
    "numpy>=2.0.2",
    "opencv-contrib-python==4.10.0.84",
    "opencv-python==4.9.0.80",
    "packaging==25.0",
    "paho-mqtt==2.1.0",
    "py2app==0.28.8",
    "pyinstaller==6.13.0",
    "pyinstaller-hooks-contrib==2025.3",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.16",
    "pyqt5-sip==12.17.0",
    "pyqtgraph==0.13.7",
]
